--- a/src/client/app/components/site-monitor/site-monitor.component.html
+++ b/src/client/app/components/site-monitor/site-monitor.component.html
@@ -13,7 +13,7 @@
                 <div class='clearfix'>Uptime: {{report.status.upsince}}</div>
               </div>
             </div>
-            <div *ngIf="report.status.last24Hours.numberOutages > 1" class="widget-body widget-warn">
+            <div *ngIf="report.status.last24Hours.numberOutages >= 1" class="widget-body widget-warn">
               <div class='center'>
                 <h4 class='truncate'><i class='fa fa-arrow-up'></i> {{report.service.name}}</h4>
                 <div class='clearfix'>Host: {{report.service.host}}</div>
