--- a/src/client/app/components/home/home.component.html
+++ b/src/client/app/components/home/home.component.html
@@ -9,7 +9,9 @@
             </li>
             <li class="sidebar-title"><span>NAVIGATION</span></li>
             <li class="sidebar-list">
-                <a [routerLink]="['Dashboard']">Dashboard<span class="menu-icon fa fa-tachometer"></span></a>
+                <a [routerLink]="['Dashboard']">Dashboard
+                    <span class="menu-icon fa fa-tachometer"></span>
+                </a>
             </li>
             <li class="sidebar-list">
                 <!-- <a [routerLink]="['Report']">Websites<span class="menu-icon fa fa-table"></span></a> -->
