--- a/src/client/app/components/weather/weather.component.html
+++ b/src/client/app/components/weather/weather.component.html
@@ -3,7 +3,7 @@
       <h3 class='title'>{{weatherReport.current_observation.display_location.city}}</h3>
       <h1 class='right content'>{{weatherReport.current_observation.temp_f}}&deg;</h1>
       <p class='right content'>
-        <img src='{{weatherReport.current_observation.icon_url}}'>
+        <img src='{{weatherReport.current_observation.icon_url}}'/>
         {{weatherReport.current_observation.weather}}
       </p>
   </div>
