rc1 working need to merge

--- a/src/client/app/components/lab-reservations/lab-reservations.component.html
+++ b/src/client/app/components/lab-reservations/lab-reservations.component.html
@@ -13,7 +13,7 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor='#reservation of jiraReservations'>
+          <tr *ngFor='let reservation of jiraReservations'>
             <td>{{reservation.key}}</td>
             <td>{{reservation.summary}}</td>
             <td>{{reservation.reservedDate | date:'short'}}</td>
