--- a/src/client/app/components/site-monitor/site-monitor.component.html
+++ b/src/client/app/components/site-monitor/site-monitor.component.html
@@ -4,7 +4,7 @@
   </div>
 	<div class='widget-body'>
     <div class='row'>
-			 <div class="col-lg-3 col-md-6 col-xs-12" *ngFor='#report of reports'>
+			 <div class="col-lg-3 col-md-6 col-xs-12" *ngFor='let report of reports'>
           <div *ngIf='!report.status.currentOutage.currentOutage' class='widget'>
             <!-- <div class='widget-header widget-success center'>
               <i class='fa fa-arrow-up'></i> {{report.service.name}} 
