latest version of ng2-charts working

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -15,7 +15,7 @@
   </div>
   <div class='col-md-4'>   
     <div>
-      <weather-widget></weather-widget>
+      <!-- <weather-widget></weather-widget> -->
     </div>
   </div>
     <div class='col-md-4'>
@@ -33,7 +33,7 @@
   <div class='col-md-4'>
     <div class='row'>
       <div>
-        <!-- <issue-metrics></issue-metrics> -->
+        <issue-metrics></issue-metrics>
       </div>
     </div>
     <div class='row'>
@@ -47,11 +47,11 @@
 
 <div class='row'>
 	<div class='col-md-8'>
-		<!-- <div class='widget'> -->
+		<div class='widget'>
       <div class='widget-header'>
         www.phiresearchlab.org Metrics (mocked data)
       </div>
-			<div class='widget-body medium-adjust'>
+			<!-- <div class='widget-body medium-adjust'>
 				 <base-chart class='chart' 
                 [data]='lineChartData'
                 [labels]='lineChartLabels'
@@ -60,9 +60,9 @@
                 [chartType]="lineChartType"
                 (chartHover)="chartHovered($event)"
                 (chartClick)="chartClicked($event)"></base-chart>
-			</div>
+			</div> -->
 	</div>
-
+  </div>
   <div class='col-md-4'>
     <div>
         <unresolved-issues></unresolved-issues>
