minor changes to UI

--- a/src/client/app/components/dashboard/dashboard.component.html
+++ b/src/client/app/components/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
 <div class='row'>
 	<div class='col-md-4'>
 
-  		<div class='widget widget-clock'>
+  		<div class='widget widget-clock small-adjust'>
   			<div *ngIf='currentDate' class='widget-body small'>
   				 <div class="clock-wrapper">
               <div class="clock-content">
