--- a/src/client/app/components/home/home.component.html
+++ b/src/client/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div id="page-wrapper" [ngClass]="{'open': toggle}">
-	 <div id="sidebar-wrapper">
+	 <!-- <div id="sidebar-wrapper">
         <ul class="sidebar">
             <li class="sidebar-main">
                 <a>
@@ -14,7 +14,7 @@
                 </a>
             </li>
             <li class="sidebar-list">
-                <!-- <a [routerLink]="['Report']">Websites<span class="menu-icon fa fa-table"></span></a> -->
+                <a [routerLink]="['Report']">Websites<span class="menu-icon fa fa-table"></span></a>
             </li>
         </ul>
         <div class="sidebar-footer">
@@ -34,7 +34,7 @@
                 </a>
             </div>
         </div>
-    </div>
+    </div> -->
 	<div id="content-wrapper">
         <div class="page-content">
         <topnav></topnav>
