--- a/src/client/app/components/topnav/topnav.component.html
+++ b/src/client/app/components/topnav/topnav.component.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="meta">
                         <div class="page">
-                            Sauron
+                            IIU Resource Dashboard (Sauron)
                         </div>
                         <div class="breadcrumb-links">
                             Sauron / Dashboard
