--- a/src/client/app/components/unresolved-issues/unresolved-issues.component.html
+++ b/src/client/app/components/unresolved-issues/unresolved-issues.component.html
@@ -1,6 +1,6 @@
 <div class='widget'>
   <div class='widget-header'>
-    Service Desk Tickets
+    Open Service Desk Tickets
   </div>
 	<div class='widget-body medium-adjust overflow-adjust'>
 		<div class='table-responsive'>
