--- a/src/client/app/components/home/home.component.html
+++ b/src/client/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div id="page-wrapper" [ngClass]="{'open': toggle}">
+<div>
 	 <!-- <div id="sidebar-wrapper">
         <ul class="sidebar">
             <li class="sidebar-main">
