--- a/src/client/app/components/issue-metrics/issue-metrics.component.html
+++ b/src/client/app/components/issue-metrics/issue-metrics.component.html
@@ -8,6 +8,7 @@
             [labels]="doughnutChartLabels"
             [chartType]="doughnutChartType"
             (chartHover)="chartHovered($event)"
-            (chartClick)="chartClicked($event)"></base-chart>
+            (chartClick)="chartClicked($event)"
+            [options]="options"></base-chart>
   </div>
 </div>
