--- a/src/client/app/components/lab-reservations/lab-reservations.component.css
+++ b/src/client/app/components/lab-reservations/lab-reservations.component.css
@@ -10,10 +10,10 @@
   background: #354962;
 }
 
-.medium-adjust {
-	height: 317px;
+// .medium-adjust {
+// 	height: 317px;
 	
-}
+// }
 
 .overflow-adjust{
 	overflow-y: auto;
